--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,24 +11,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
     <ImageView
-        android:id="@+id/iv1"
+        android:id="@+id/iv"
         android:layout_width="match_parent"
-        android:layout_height="50dp"/>
-    <ImageView
-        android:id="@+id/iv2"
-        android:layout_width="match_parent"
-        android:layout_height="50dp"/>
-    <ImageView
-        android:id="@+id/iv3"
-        android:layout_width="match_parent"
-        android:layout_height="50dp"/>
-    <ImageView
-        android:id="@+id/iv4"
-        android:layout_width="match_parent"
-        android:layout_height="50dp"/>
-    <ImageView
-        android:id="@+id/iv5"
-        android:layout_width="match_parent"
-        android:layout_height="50dp"/>
-
+        android:layout_height="match_parent"/>
 </LinearLayout>
