--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,6 +12,7 @@
         android:layout_height="wrap_content" />
     <ImageView
         android:id="@+id/iv"
+        android:layout_margin="30dp"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
 </LinearLayout>
